responsivo de pagina "lampara"

--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -77,7 +77,7 @@
     <img src="src/img/lamparas/portada.jpg" alt="Portada" class="img-portada">
 </section>
 
-<section class="container justify-content-start mb-5 mt-5">
+<section class="container px-4 justify-content-start mb-5 mt-5">
   <div class="row">
     <div>
       <h1 class="protitulo">LAMPARA</h1>
@@ -92,7 +92,7 @@
   </div>
 </section>
 
-<section class="container justify-content-start mt-6">
+<section class="container px-4 justify-content-start mt-6">
   <div class="row justify-content-start">
     <div class="col-12 col-lg-6">
       <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-4 mt-6 alt=DEMA1">
@@ -102,17 +102,17 @@
       <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid" mb-4 alt="DEMA3">
     </div>
     <div class="col-sm-12 col-md-8 col-lg-12">
-      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid" alt="DEMA4">
+      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid mt-4" alt="DEMA4">
     </div>
   </div>
 </section>
 
-<section class="container my-4 gap-4">
+<section class="container px-4 my-4 gap-4">
   <div class="row">
-    <div class="col-lg-5 col-3">
+    <div class="col-lg-5 col-5">
      <img src="src/img/lamparas/TRENCH2.jpg" class="img-fluid" alt="TRENCH2">
     </div>
-    <div class="col-lg-7 col-12">
+    <div class="col-lg-7 col-7">
       <img src="src/img/lamparas/TRENCH1.jpg" class="img-fluid" alt="TRENCH1">
     </div>
     <div class="col-lg-9 col-12">
@@ -121,12 +121,12 @@
   </div>
 </section>
 
-<section class="container my-4 gap-4">
+<section class="container px-4 my-4 gap-4">
   <div class="row">
-    <div class="col-lg-4 col-3">
+    <div class="col-lg-4 col-5">
      <img src="src/img/lamparas/BLU2.jpg" class="img-fluid" alt="BLURRYFACE">
     </div>
-    <div class="col-lg-8 col-12">
+    <div class="col-lg-8 col-7">
       <img src="src/img/lamparas/BLU1.jpg" class="img-fluid" alt="BLURRYFACE">
     </div>
     <div class="col-lg-12 col-12">
@@ -135,6 +135,59 @@
   </div>
 </section>
 
+<section class="container px-4 mt-4">
+  <div class="row">
+    <div class="col-lg-8 col-12">
+     <img src="src/img/lamparas/ADEMA1.jpg" class="img-fluid mb-4" alt="LAMPARA">
+    </div>
+    <div class="col-lg-4 col-12">
+      <img src="src/img/lamparas/ADEMA2.jpg" class="img-fluid" alt="LAMPARA">
+      <img src="src/img/lamparas/ADEMA3.jpg" class="img-fluid mt-4 mb-4" alt="LAMPARA">
+    </div>
+    <div>
+      <img src="src/img/lamparas/ADEMA4.jpg" class="img-fluid" alt="LAMPARA">
+    </div>
+  </div>
+</section>
+
+<section class="container px-4 gab-4">
+  <div class="row">
+    <div class="col-lg-6 col-12">
+     <img src="src/img/lamparas/ATRENCH1.jpg" class="img-fluid mt-4" alt="LAMPARA">
+    </div> 
+    <div class="col-lg-6 col-12">
+     <img src="src/img/lamparas/ATRENCH4.jpg" class="img-fluid mt-4" alt="LAMPARA">
+    </div>
+    <div class="col-lg-12 col-12">
+      <img src="src/img/lamparas/ATRENCH2.jpg" class="img-fluid mt-4" alt="LAMPARA">
+    </div>
+  </div>
+</section>
+
+<section class="container px-4 my-4">
+  <div class="row">
+    <div class="col-lg-6 col-12">
+     <img src="src/img/lamparas/ABLU1.jpg" class="img-fluid mb-4" alt="LAMPARA">
+    </div> 
+    <div class="col-lg-6 col-12 gap-4">
+      <img src="src/img/lamparas/ABLU2.jpg" class="img-fluid mb-4" alt="LAMPARA">
+      <img src="src/img/lamparas/ABLU5.jpg" class="img-fluid mb-4" alt="LAMPARA">
+      <img src="src/img/lamparas/ABLU6.jpg" class="img-fluid" alt="LAMPARA">
+    </div>
+  </div>
+</section>
+
+<section class="my-5 px-4 py-5">
+  <div class="container">
+    <h2 class="d-flex flex-row-reverse titulo3">HERRAMIENTAS</h2> 
+  </div>
+  <div class="container">
+    <div class="justify-content-center row">
+      <img src="src/herramientas/ILUUST.png" class="col-lg-2 col-4 my-5" alt="Illustrator">
+      <img src="src/herramientas/dremel.png" class="col-lg-4 col-6 my-5" alt="dremel">
+    </div>
+  </div>
+</section>
 
 </body>
 
