Home casi hecho, fav icon

--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -42,7 +42,7 @@
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- fin importacion bootstrap  -->
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
-  <div class="container-fluid">
+  <div class="container-fluid justify-content-start">
 
     <a class="navbar-brand logo" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
@@ -53,19 +53,16 @@
     </button>
 
 
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link subti text-left" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
         </li>
         <li class="nav-item">
           <a class="nav-link subti" href="proyectos.html">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link subti" aria-disabled="true">Procesos</a>
         </li>
       </ul>
     </div>
@@ -102,7 +99,7 @@
       <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid" mb-4 alt="DEMA3">
     </div>
     <div class="col-sm-12 col-md-8 col-lg-12">
-      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid mt-4" alt="DEMA4">
+      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid" alt="DEMA4">
     </div>
   </div>
 </section>
