--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+  <link rel="icon" type="image/svg+xml" href="src/img/gato/favicon isaacc@2x.png" />
 <meta charset="utf-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +46,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="#">
+    <a class="navbar-brand logo px-5" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
 
 
@@ -54,44 +55,58 @@
     </button>
 
 
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="#">Home</a>
+          <a class="nav-link parraosc" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
+          <a class="nav-link parraosc" href="acerca.html">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="proyectos.html">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link subti" aria-disabled="true">Procesos</a>
+          <a class="nav-link parraosc" href="proyectos.html">Proyectos</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<body style="background-color: #292929;">
-  <section>
-      <div class="container justify-content-start">
-        <div class="column">
-        <h1 class="titulo1">
-        ¡HOLA! <br>
-        SOY ISAAC</h1>
-        <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+<body style="background-color: #231F20;">
+  <section class="cajacolor2">
+    <div class="container py-5 mb-5 vh-100">
+      <div class="row align-items-center">
+        <div class="col-lg-7 col-12">
+          <h1 class="titulohome pt-5 ">
+            ¡HOLA! <br>
+            SOY ISAAC</h1>
+          <p class="parraosc my-3">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+        </div>
+        <div class="col-lg-5 col-8 py-5 justify-content-end">
+          <img src="src/img/gato/gato psg pricnipal@2x.png" class="img-fluid">
         </div>
       </div>
-    <img src="/src/img/perfil.jpg" />
+    </div>
   </section>
-  <section>
-    <body>
+  <!--
+<section class="cajacolor2">
+  <div class="container py-5 mb-5 vh-100 justify-content-start">
+    <div class="row">
+      <h1 class="titulo1 mt-5 pt-5">
+        ¡HOLA! <br>
+        SOY ISAAC</h1>
+        <p class="parraosc my-3">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+      </div>
+      <div class="col-lg-4">
+        <img src="src/img/gato/gato pag principal@2x.png" class="img-fluid">
+      </div>
+  </div>
+</section> 
+--> 
+  <section class="my-5">
     <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
     <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
     <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
     <button type="button">VER PROYECTO</button>
-    </body>
   </section>
   <section>
     <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
