--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -42,9 +42,9 @@
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- fin importacion bootstrap  -->
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
-  <div class="container-fluid justify-content-start">
+  <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="index.html">
+    <a class="navbar-brand logo px-5" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
 
 
@@ -53,21 +53,22 @@
     </button>
 
 
-    <div class="collapse navbar-collapse justify-content-end id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti text-left" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
+          <a class="nav-link barranav" href="acerca.html">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="proyectos.html">Proyectos</a>
+          <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
 <body style="background-color: #292929;">
 
   <section class="portada">
