--- a/acerca.html
+++ b/acerca.html
@@ -45,7 +45,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="index.html">
+    <a class="navbar-brand logo px-5" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
 
 
@@ -54,19 +54,16 @@
     </button>
 
 
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
+          <a class="nav-link barranav" href="acerca.html">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="proyectos.html">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link subti" aria-disabled="true">Procesos</a>
+          <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
         </li>
       </ul>
     </div>
