--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 
 <head>
-  <link rel="icon" type="image/svg+xml" href="src/img/gato/favicon isaacc@2x.png" />
+  <link rel="icon" type="image/svg+xml" href="src/img/gato/faviconpagina.png" />
+
+
 <meta charset="utf-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,13 +60,13 @@
     <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link parraosc" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link parraosc" href="acerca.html">Acerca de mi</a>
+          <a class="nav-link barranav" href="#acerca">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link parraosc" href="proyectos.html">Proyectos</a>
+          <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
         </li>
       </ul>
     </div>
@@ -72,7 +74,7 @@
 </nav>
 
 <body style="background-color: #231F20;">
-  <section class="cajacolor2">
+  <section class="cajacolor2 mb-5">
     <div class="container py-5 mb-5 vh-100">
       <div class="row align-items-center">
         <div class="col-lg-7 col-12">
@@ -102,22 +104,116 @@
   </div>
 </section> 
 --> 
-  <section class="my-5">
-    <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
-    <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
-    <button type="button">VER PROYECTO</button>
+  <section class="container my-5 py-5">
+    <div class="col-lg-12 col-12">
+      <h2 class="amatitulo">ACERCA DE MI</h2>
+    </div>
   </section>
-  <section>
-    <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <img class="Inter(2) alt"="Inter(2)" src="src/img/Inter(2).jpg" />
-    <h3 class="subtosc">TRABAJOS ANÁLOGOS</h3>
-    <p class="parraosc"> Grafito, tinta, pasteles, acrilicos y mas</p>
+  <section id="acerca" class="container my-5 vh-35">
+    <div class="row align-items-center">
+      <div class="col-lg-4 col-8">
+        <img src="src/img/gato/favicon isaacc@2x.png" class="img-fluid" alt="acerca de mi">
+      </div>
+      <div class="col-lg-8 col-12 px-5">
+        <p class="parraosc">Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas nuevas que puedan nutrirme de conocimiento. He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas, identidades, así como el manejo de software CAD y maquinas CNC.</p>
+      </div>
+    </div>
+  </section>
+
+  <br>
+
+  <section class="container  my-5 py-5">
+    <div class="col-lg-8 col-12">
+      <h2 class="amatitulo">HERRAMIENTAS QUE SÉ USAR</h2>
+    </div>
+    <div class="col-lg-6 col-12">
+      <p class="parraosc"> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me considero hábil en todos los programas a los que he tenido acceso. </p>
+    </div>
+  </section>
+
+  <section class="container my-3 px-5 py-5">
+    <div class="row mb-4 mx-5">
+      <div class="col-lg-6 col-6">
+        <img src="src/img/ILLUSTRATOR.png" class="img-fluid" alt="ILLUSTRATOR">
+      </div>
+      <div class="col-lg-6 col-6">
+        <img src="src/img/PHOTOSHOP.png" class="img-fluid" alt="PHOTOSHOP">
+      </div>
+    </div>
+    <div class="row mb-4 mx-5">
+      <div class="col-lg-6 col-6">
+        <img src="src/img/ANIMATE.png" class="img-fluid" alt="ANIMATE">
+      </div>
+      <div class="col-lg-6 col-6">
+        <img src="src/img/AUTOCAD2.png" class="img-fluid" alt="AUTOCAD">
+      </div>
+    </div>
+    <div class="row mx-5">
+      <div class="col-lg-6 col-6">
+        <img src="src/img/3DMAX2.png" class="img-fluid" alt="3DMAX">
+      </div>
+      <div class="col-lg-6 col-6">
+        <img src="src/img/BLENDER2.png" class="img-fluid" alt="BLENDER">
+      </div>
+    </div>
   </section>
 
 
+  <section class="container my-5 vh-35">
+    <br>
+  </section>
+  <section class="my-5 px-5">
+    <div class="container my-5">
+      <div class="col-lg-12 col-12 my-5">
+        <img src="src/img/lamparas/portada.jpg" class="img-fluid" alt="proyecto">
+      </div>
+    </div>
+  </section>
+  <section class="my-5 px-5">
+    <div class=" container my-5 entre">
+      <div class="col-lg-12 col-12">
+        <h3 class="subtosc mt-2">LUZ EN MOVIMIENTO</h3>
+      </div>
+      <div class="entre">
+        <div class="col-lg-6 col-12 my-3">
+          <p class="parraosc">Proyecto de 5to trimestre en la UEA de Taller de Procesos y Tecnologías para la Producción de Modelos, Prototipos y Originales, lampara hecha de tuvo pvc y tallada con herramientas en LAD</p>
+        </div> 
+        <div class="col-lg-4 col-4 amatitulo2">
+          <a class="verproyecto" href="LAMPARA.HTML">VER PROYECTO</a>
+        </div>
+      </div>
+    </div>
+  </section>   
+        
+  <section class="my-5 pt-5 px-5">
+    <div class="container my-5">
+      <div class="col-lg-12 col-12 my-5">
+        <img src="src/CARDELLINA/close3.jpg" class="img-fluid" alt="proyecto">
+      </div>
+    </div>
+  </section>
+  <section class="my-5 my-5 mb-5 px-5">
+    <div class=" container my-5 entre">
+      <div class="col-lg-12 col-12">
+        <h3 class="subtosc mt-2">CARDELLINA</h3>
+      </div>
+      <div class="entre">
+        <div class="col-lg-6 col-12 my-3">
+          <p class="parraosc">Proyecto de 2do trimestre en la UEA de Laboratorio Básico de Diseño Bi y Tridimensional</p>
+        </div>  
+        <div class="col-lg-4 col-4 amatitulo2">
+          <a class="verproyecto" href="LAMPARA.HTML">VER PROYECTO</a>
+        </div>
+      </div>
+    </div>
+  </section> 
 
+  <section class="container vh-100">
+    <div>
 
+    </div>
+  </section>
+    
 
 </body>
 
