--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+  <link rel="icon" type="image/svg+xml" href="src/img/gato/faviconpagina.png" />
 <meta charset="utf-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,9 +58,6 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link barranav" href="acerca.html">Acerca de mi</a>
         </li>
         <li class="nav-item">
           <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
@@ -185,6 +183,22 @@
       <img src="src/herramientas/dremel.png" class="col-lg-4 col-6 my-5" alt="dremel">
     </div>
   </div>
+</section>
+
+<section class="container-fluid my-5 py-5">
+  <div class="cajacolor">
+    <div class="row px-5">
+      <div class="col-lg-12 col-12">
+        <h2 class="titulo2">CONTACTO</h1>
+      </div>
+      <div class="col-lg-6 col-12">
+        <a href="mailto: angel.zaldivar@cua.uam.mx" class="contacto">Gmail</a>
+      </div>
+      <div class="col-lg-6 col-12">
+        <a href="index.html" class="contacto">HOME</a>
+      </div>
+    
+    </div>
 </section>
 
 </body>
