--- a/index.html
+++ b/index.html
@@ -208,10 +208,16 @@
     </div>
   </section> 
 
-  <section class="container vh-100">
-    <div>
-
-    </div>
+  <section class="container-fluid my-5 py-5">
+    <div class="cajacolor">
+      <div class="row px-5">
+        <div class="col-lg-12 col-12">
+          <h2 class="titulo2">CONTACTO</h1>
+        </div>
+        <div class="col-lg-6 col-12">
+          <a href="mailto: angel.zaldivar@cua.uam.mx" class="contacto">Gmail</a>
+        </div>
+      </div>
   </section>
     
 
