--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <p class="parraosc">Proyecto de 5to trimestre en la UEA de Taller de Procesos y Tecnologías para la Producción de Modelos, Prototipos y Originales, lampara hecha de tuvo pvc y tallada con herramientas en LAD</p>
         </div> 
         <div class="col-lg-4 col-4 amatitulo2">
-          <a class="verproyecto" href="LAMPARA.HTML">VER PROYECTO</a>
+          <a class="verproyecto" href="cardellina.html">VER PROYECTO</a>
         </div>
       </div>
     </div>
