--- a/TALLERDEIMAGEN.HTML
+++ b/TALLERDEIMAGEN.HTML
@@ -45,8 +45,9 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo px-5" href="index.html">
+    <a class="navbar-brand logo" href="#">
       <p class="subt">Isaac Zaldivar</p>
+    </a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,10 +55,13 @@
     </button>
 
 
-    <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link barranav" href="#acerca">Acerca de mi</a>
         </li>
         <li class="nav-item">
           <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
