--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- fin importacion bootstrap  -->
+
+
+
+
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo px-5" href="index.html">
+    <a class="navbar-brand logo" href="#">
       <p class="subt">Isaac Zaldivar</p>
+    </a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +62,7 @@
     </button>
 
 
-    <div class="collapse navbar-collapse justify-content-end py-2 px-5 id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
