--- a/proyectos.html
+++ b/proyectos.html
@@ -44,8 +44,9 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="index.html">
+    <a class="navbar-brand logo" href="#">
       <p class="subt">Isaac Zaldivar</p>
+    </a>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,16 +57,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link barranav" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
+          <a class="nav-link barranav" href="#acerca">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link subti" href="proyectos.html">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link subti" aria-disabled="true">Procesos</a>
+          <a class="nav-link barranav" href="proyectos.html">Proyectos</a>
         </li>
       </ul>
     </div>
